# ai_engine

./: CMakeLists.txt  OAT.xml  README.md  README_zh.md  bundle.json
services/client/: BUILD.gn  CMakeLists.txt
services/client/algorithm_sdk/: BUILD.gn
services/client/algorithm_sdk/asr/: BUILD.gn
services/client/algorithm_sdk/asr/keyword_spotting/: BUILD.gn
services/client/algorithm_sdk/cv/: BUILD.gn
services/client/algorithm_sdk/cv/image_classification/: BUILD.gn
services/client/client_executor/: BUILD.gn
services/client/client_executor/include/: async_handler.h  client_factory.h  i_aie_client.inl  i_client_cb.h
services/client/client_executor/source/: async_handler.cpp  client_factory.cpp
services/client/communication_adapter/: BUILD.gn
services/client/communication_adapter/include/: sa_async_handler.h  sa_client.h  sa_client_adapter.h  sa_client_proxy.h
services/client/communication_adapter/source/: sa_async_handler.cpp  sa_client.cpp  sa_client_adapter.cpp  sa_client_proxy.cpp
services/common/: CMakeLists.txt
services/common/platform/dl_operation/: BUILD.gn
services/common/platform/dl_operation/include/: aie_dl_operation.h
services/common/platform/dl_operation/source/: aie_dl_operation.cpp
services/common/platform/event/: BUILD.gn
services/common/platform/event/include/: i_event.h
services/common/platform/event/source/: event.cpp
services/common/platform/lock/: BUILD.gn
services/common/platform/lock/include/: rw_lock.h  rw_lock.inl
services/common/platform/lock/source/: rw_lock.cpp
services/common/platform/os_wrapper/audio_loader/: BUILD.gn
services/common/platform/os_wrapper/feature/: BUILD.gn
services/common/platform/os_wrapper/ipc/: BUILD.gn
services/common/platform/os_wrapper/utils/: BUILD.gn  plugin_helper.cpp  plugin_helper.h  single_instance.h
services/common/platform/queuepool/: queue.h  queue.inl  queue_pool.h  queue_pool.inl
services/common/platform/semaphore/: BUILD.gn
services/common/platform/semaphore/include/: i_semaphore.h  simple_event_notifier.h  simple_event_notifier.inl
services/common/platform/semaphore/source/: semaphore.cpp
services/common/platform/threadpool/: BUILD.gn
services/common/platform/threadpool/include/: aie_thread_unix.h  thread.h  thread_pool.h
services/common/platform/threadpool/source/: aie_thread_unix.cpp  thread.cpp  thread_pool.cpp
services/common/platform/time/: BUILD.gn
services/common/platform/time/include/: time.h  time_elapser.h
services/common/platform/time/source/: time.cpp  time_elapser.cpp
services/common/protocol/data_channel/: BUILD.gn
services/common/protocol/ipc_interface/: ai_service.h
services/common/protocol/plugin_config/: aie_algorithm_type.h
services/common/protocol/retcode_inner/: aie_retcode_inner.h
services/common/protocol/struct_definition/: aie_info_define.h
services/common/utils/: aie_guard.h  aie_macros.h  inf_cast_impl.h
services/common/utils/constants/: constants.h
services/common/utils/encdec/: BUILD.gn
services/common/utils/file_operation/: BUILD.gn
services/common/utils/log/: aie_log.h
services/server/: BUILD.gn  CMakeLists.txt
services/server/communication_adapter/: BUILD.gn
services/server/communication_adapter/include/: adapter_wrapper.h  client_listener_handler.h  future_listener.h  sa_async_handler.h  sa_server_adapter.h
services/server/communication_adapter/source/: adapter_wrapper.cpp  client_listener_handler.cpp  future_listener.cpp  sa_async_handler.cpp  sa_server.c  sa_server_adapter.cpp  start_server.c
services/server/plugin/: BUILD.gn  i_plugin.h  i_plugin_callback.h
services/server/plugin/asr/: BUILD.gn
services/server/plugin/cv/: BUILD.gn
services/server/plugin_manager/: BUILD.gn  get_config_ini.py
services/server/plugin_manager/include/: aie_plugin_info.h  i_plugin_manager.h  plugin.h  plugin_label.h  plugin_manager.h
services/server/plugin_manager/source/: aie_plugin_info.cpp  plugin.cpp  plugin_label.cpp  plugin_manager.cpp
services/server/server_executor/: BUILD.gn
services/server/server_executor/include/: async_msg_handler.h  engine.h  engine_manager.h  engine_worker.h  future.h  future_factory.h  i_async_task_manager.h  i_engine_manager.h  i_future.h  i_future_listener.h  i_handler.h  i_sync_task_manager.h  server_executor.h  sync_msg_handler.h  task.h
services/server/server_executor/source/: async_msg_handler.cpp  engine.cpp  engine_manager.cpp  engine_worker.cpp  future.cpp  future_factory.cpp  server_executor.cpp  sync_msg_handler.cpp
test/: BUILD.gn  CMakeLists.txt
test/common/: BUILD.gn
test/common/dl_operation/: BUILD.gn  dl_operation_test.cpp
test/common/dl_operation/dl_operation_so/: BUILD.gn
test/common/encdec/: encdec_test.cpp
test/common/event/: event_test.cpp
test/common/queuepool/: queuepool_test.cpp
test/common/semaphore/: semaphore_test.cpp
test/common/threadpool/: thread_pool_test.cpp
test/common/time/: time_test.cpp
test/function/: BUILD.gn
test/function/async_process/: async_process_function_test.cpp
test/function/death_callback/: BUILD.gn  death_callback_test.cpp
test/function/destroy/: destroy_function_test.cpp
test/function/init/: init_function_test.cpp
test/function/plugin_label/: plugin_label_test.cpp
test/function/plugin_manager/: plugin_manager_test.cpp
test/function/prepare/: prepare_function_test.cpp
test/function/release/: release_function_test.cpp
test/function/sa_client/: sa_client_test.cpp
test/function/set_get_option/: option_function_test.cpp
test/function/share_memory/: share_memory_test.cpp
test/function/sync_process/: sync_process_function_test.cpp
test/performance/: BUILD.gn
test/performance/delay/async_process/: async_process_delay_test.cpp
test/performance/delay/sync_process/: sync_process_delay_test.cpp
test/performance/reliability/aie_client/: aie_client_reliability_test.cpp
test/sample/: BUILD.gn
test/sample/include/: sample_plugin_1.h  sample_plugin_2.h
test/sample/source/: sample_plugin_1.cpp  sample_plugin_2.cpp
test/utils/: client_callback.h  service_dead_cb.h
(+79 files in other folders)
