# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//foundation/ai/engine/services/ai_plugin_config.gni")

shared_library("ai_client") {
  deps = [
    "client_executor",
    "communication_adapter:ai_communication_adapter",
    "//foundation/ai/engine/services/common/platform/os_wrapper/ipc:aie_ipc",
    "//foundation/ai/engine/services/common/platform/threadpool:threadpool",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
  ]
}

lite_component("client") {
  features = [
    ":ai_client",
    "algorithm_sdk:algorithm_sdk",
  ]

  foreach(plugin, activate_plugin_list) {
    features += [ "//foundation/ai/$plugin/services/client/algorithm_sdk:algorithm_sdk" ]
  }
}
