# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

lite_component("ai_server") {
  target_type = "executable"
  features = [
    "communication_adapter:ai_communication_adapter",
    "plugin_manager",
    "server_executor",
  ]
  cflags = [ "-fPIC" ]
  ldflags = [
    "-Wl,-Map=server.map",
    "-lstdc++",
    "-Wl,--whole-archive",
    "libs/libai_communication_adapter.a",
    "-Wl,--no-whole-archive",
    "-ldl",
    "-pthread",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/ai/engine/services/common/platform/dl_operation:dlOperation",
    "//foundation/ai/engine/services/common/platform/event:event",
    "//foundation/ai/engine/services/common/platform/lock:lock",
    "//foundation/ai/engine/services/common/platform/os_wrapper/ipc:aie_ipc",
    "//foundation/ai/engine/services/common/platform/semaphore:semaphore",
    "//foundation/ai/engine/services/common/platform/threadpool:threadpool",
    "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
  ]
}

lite_component("server") {
  features = [
    ":ai_server",
    "plugin:plugin",
    "plugin_manager:gen_etc_ini",
  ]
}
