# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/test.gni")

unittest("ai_test_common_door") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/ai"
  ldflags = [
    "-lstdc++",
    "-ldl",
  ]
  include_dirs = [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//foundation/ai/ai_engine/interfaces",
    "//foundation/ai/ai_engine/services/common",
    "//third_party/googletest/googletest/include",
    "//third_party/googletest/googletest/src",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/ai/ai_engine/services/common/platform/dl_operation:dlOperation",
    "//foundation/ai/ai_engine/services/common/platform/event:event",
    "//foundation/ai/ai_engine/services/common/platform/semaphore:semaphore",
    "//foundation/ai/ai_engine/services/common/platform/threadpool:threadpool",
    "//foundation/ai/ai_engine/services/common/platform/time:time",
    "//foundation/ai/ai_engine/services/common/utils/encdec:encdec",
  ]
  sources = [
    "dl_operation/dl_operation_test.cpp",
    "encdec/encdec_test.cpp",
    "event/event_test.cpp",
    "queuepool/queuepool_test.cpp",
    "semaphore/semaphore_test.cpp",
    "threadpool/thread_pool_test.cpp",
    "time/time_test.cpp",
  ]
}

group("common") {
  deps = [
    ":ai_test_common_door",
    "dl_operation:testDlOperationSo",
  ]
}
