# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("client_executor") {
  sources = [
    "source/async_handler.cpp",
    "source/client_factory.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
  include_dirs = [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//foundation/ai/ai_engine/interfaces",
    "//foundation/ai/ai_engine/services/client",
    "//foundation/ai/ai_engine/services/common",
  ]
}
