# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("ai_communication_adapter") {
  sources = [
    "source/sa_async_handler.cpp",
    "source/sa_client.cpp",
    "source/sa_client_adapter.cpp",
    "source/sa_client_proxy.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/ai/engine/interfaces",
    "//foundation/ai/engine/services/client",
    "//foundation/ai/engine/services/common",
    "//foundation/communication/ipc/interfaces/innerkits/c/ipc/include",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/registry",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
    "//third_party/bounds_checking_function/include",
    "//utils/native/lite/include",
  ]
  deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
}
