# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/ai/engine/services/ai_plugin_config.gni")

action("gen_etc_ini") {
  outputs = [ "${root_out_dir}/etc/ai_engine_plugin.ini" ]
  script = "get_config_ini.py"
  args = []
  args = [ rebase_path(get_path_info("//", "abspath")) ]
  args += [ rebase_path("$root_out_dir") ]
  args += [ "${board_name}" ]
  args += [ "$activate_plugin_list"]
}

source_set("plugin_manager") {
  sources = [
    "source/aie_plugin_info.cpp",
    "source/plugin.cpp",
    "source/plugin_label.cpp",
    "source/plugin_manager.cpp",
  ]

  cflags = [ "-fPIC" ]
  cflags_cc = cflags

  include_dirs = [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//foundation/ai/engine/interfaces/",
    "//foundation/ai/engine/services/common/",
    "//foundation/ai/engine/services/server/",
    "//third_party/bounds_checking_function/include",
    "//third_party/iniparser",
  ]
  deps = [ "//third_party/iniparser:iniparser" ]
}
