# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

static_library("testDeathCallbackLibrary") {
  sources = [ "death_callback_test.cpp" ]
  cflags_cc = [ "-fexceptions" ]
  include_dirs = [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//foundation/ai/engine/interfaces",
    "//foundation/ai/engine/services/client",
    "//foundation/ai/engine/services/common",
    "//foundation/ai/engine/test/utils",
    "//foundation/communication/ipc/interfaces/innerkits/c/ipc/include",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/innerkits/registry",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/innerkits/samgr",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/registry",
    "//foundation/systemabilitymgr/samgr_lite/interfaces/kits/samgr",
    "//third_party/bounds_checking_function/include",
    "//utils/native/lite/include",
  ]
}

lite_component("testDeathCallback") {
  target_type = "executable"
  output_dir = "$root_out_dir/test/unittest/ai"
  features = [ ":testDeathCallbackLibrary" ]
  ldflags = [ "-lstdc++" ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/ai/engine/services/client:ai_client",
    "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
  ]
}
